@@ -22,21 +22,8 @@
 #include <config.h>
 #endif
 #include <stdio.h>
-#ifdef STDC_HEADERS
-#include <stdlib.h>
-#endif
-#ifdef HAVE_UNISTD_H
-#include <unistd.h>
-#endif
-#ifdef HAVE_FCNTL_H
-#include <fcntl.h>
-#else
-#include <sys/file.h>
-#endif
-#include <signal.h>
 #include <sys/types.h>
 #include <sys/stat.h>
-#include <sys/param.h>
 #include <errno.h>
 
 #include "checkalloc.h"
@@ -992,33 +979,6 @@ void
 loadfile(const char *file, STRBUF *result)
 {
 	load_with_replace(file, result, 0);
-}
-/**
- * copy file.
- */
-static void
-copyfile(const char *from, const char *to)
-{
-	int ip, op, size;
-	char buf[8192];
-
-#ifndef O_BINARY
-#define O_BINARY 0
-#endif
-	ip = open(from, O_RDONLY|O_BINARY);
-	if (ip < 0)
-		die("cannot open input file '%s'.", from);
-	op = open(to, O_WRONLY|O_CREAT|O_TRUNC|O_BINARY, 0775);
-	if (op < 0)
-		die("cannot create output file '%s'.", to);
-	while ((size = read(ip, buf, sizeof(buf))) != 0) {
-		if (size < 0)
-			die("file read error.");
-		if (write(op, buf, size) != size)
-			die("file write error.");
-	}
-	close(op);
-	close(ip);
 }
 /**
  * makecommonpart: make a common part for @FILE{mains.html} and @FILE{index.html}
@@ -2135,22 +2095,31 @@ main(int argc, char **argv)
 	 * (11) style sheet file (style.css)
 	 */
 	if (enable_xhtml) {
-		char com[MAXPATHLEN*2+32];
+		char src[MAXPATHLEN];
+		char dist[MAXPATHLEN];
 #ifdef __DJGPP__
 		const char *template = "";
-		snprintf(com, sizeof(com), "%s/gtags/style.css.tmpl", datadir, distpath);
-		if (test("f", com))
+		snprintf(src, sizeof(com), "%s/gtags/style.css.tmpl", datadir);
+		if (test("f", src))
 		       template = ".tmpl";
-		snprintf(com, sizeof(com), "cp \"%s\"/gtags/style.css%s \"%s\"/style.css", datadir, template, distpath);
+		snprintf(src, sizeof(src), "%s/gtags/style.css%s", datadir, template);
+		snprintf(dist, sizeof(dist), "%s/style.css", distpath);
 #else
-		snprintf(com, sizeof(com), "cp \"%s\"/gtags/style.css.tmpl \"%s\"/style.css", datadir, distpath);
+		snprintf(src, sizeof(src), "%s/gtags/style.css.tmpl", datadir);
+		snprintf(dist, sizeof(dist), "%s/style.css", distpath);
 #endif
-		system(com);
+		copyfile(src, dist);
 	}
 	if (auto_completion || tree_view) {
-		char com[MAXPATHLEN*2+32];
-		snprintf(com, sizeof(com), "cp -r \"%s\"/gtags/jquery/* \"%s\"/js", datadir, distpath);
-		system(com);
+		char src[MAXPATHLEN];
+		char dist[MAXPATHLEN];
+
+		snprintf(src, sizeof(src), "%s/gtags/jquery", datadir);
+		snprintf(dist, sizeof(dist), "%s/js", distpath);
+		copydirectory(src, dist);
+		snprintf(src, sizeof(src), "%s/gtags/jquery/images", datadir);
+		snprintf(dist, sizeof(dist), "%s/js/images", distpath);
+		copydirectory(src, dist);
 	}
 	message("[%s] Done.", now());
 	if (vflag && (cflag || fflag || dynamic || auto_completion)) {
@@ -2176,10 +2145,12 @@ main(int argc, char **argv)
 		message(" Good luck!\n");
 	}
 	if (Iflag) {
-		char com[MAXPATHLEN*2+32];
+		char src[MAXPATHLEN];
+		char dist[MAXPATHLEN];
 
-		snprintf(com, sizeof(com), "cp -r \"%s\"/gtags/icons \"%s\"", datadir, distpath);
-		system(com);
+		snprintf(src, sizeof(src), "%s/gtags/icons", datadir);
+		snprintf(dist, sizeof(dist), "%s/icons", distpath);
+		copydirectory(src, dist);
 	}
 	gpath_close();
 	/*
